[project]
name = "alpha-cracker"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { email = "lmixson@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
alpha-cracker = "alpha_cracker:main"

[build-system]
requires = ["uv_build>=0.7.8,<0.8"]
build-backend = "uv_build"
